--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: tweet-app
     env: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput"
     startCommand: "gunicorn chaiheadq.wsgi"
     envVars:
       - key: DJANGO_SETTINGS_MODULE
@@ -17,6 +17,7 @@ services:
         fromDatabase:
           name: tweet-db
           property: connectionString
+    autoDeploy: true
 
 databases:
   - name: tweet-db
