--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,9 @@ services:
   - type: web
     name: tweet-app
     env: python
-    buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput"
+    plan: free
+    pythonVersion: 3.11
+    buildCommand: "chmod +x build.sh && ./build.sh"
     startCommand: "gunicorn chaiheadq.wsgi"
     envVars:
       - key: DJANGO_SETTINGS_MODULE
@@ -13,6 +15,8 @@ services:
         generateValue: true
       - key: DEBUG
         value: False
+      - key: ALLOWED_HOSTS
+        value: .onrender.com
       - key: DATABASE_URL
         fromDatabase:
           name: tweet-db
